--- a/05/index.html
+++ b/05/index.html
@@ -56,8 +56,8 @@ h1 {font-family:Roboto Condensed; font weight:1000px; color:rgb(212, 234, 246);}
 </style>
 
 <!--/*Source: Navbar Bootstrsap -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
+<nav class="navbar navbar-expand-md navbar-custom">
+  <span class="navbar-brand mb-0 h2"> PS 70: Intro to Digital Fabrication</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
     <span class="navbar-toggler-icon"></span>
   </button>
