--- a/12/index.html
+++ b/12/index.html
@@ -16,6 +16,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
+
+
+
 <!-- Source: Introduction Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -147,7 +150,7 @@ Given that this water system is meant to be for small scale use, I decided to bu
 Originally I had hoped to use capacitive sensors due to their low cost and easy installation (you only really need to strips of copper and some wire), however I soon found that the seemingly user friendly aspect of these capacitive sensors could not outweigh the potential loss in accuracy in this case. As much as I tried to play around with the capacitors to increase accuracy, I could not decrease the immense variability. At times the readings would jump from 90 ml to 300 ml. The original code I had for this type of sensor is shown below:
 
 
-<pre><code>
+<pre><code class="language-arduino">
 
 //intervals for sensor
 int read_high;
@@ -261,7 +264,7 @@ A collage of failures that didn't make it:
     <img src="prototype2.jpeg" alt="prototype2" style="width:100%">
   </div>
   <div class="column">
-    <img src="prototype1.2.jpeg" alt="prototype1 print failed " style="width:500%">
+    <img src="prototype1.2.jpeg" alt="prototype1 print failed " style="width:50%">
   </div>
 </div>
 
@@ -273,7 +276,7 @@ A collage of failures that didn't make it:
     <img src="prototype3.2.jpeg" alt="prototype2" style="width:100%">
   </div>
   <div class="column">
-    <img src="app.jpeg" alt="prototype1 print failed " style="width:70%">
+    <img src="app.jpeg" alt="prototype1 print failed " style="width:60%">
   </div>
 </div>
 
