--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -150,13 +150,12 @@ I am planning to 3D print a functional pump. I have not yet decided what type of
 
 I have not been able to come up with a more sophisticated design for a filter besides one such as the one in the image below (i.e a bio or sand filter). I would like to replicate a professional filter using membranes but I am unclear on how these are produced exactly and if this would be feasibly reproduced. 
 
+
 <img src="filter.jpg" alt="Filter" style="width:40%"  class="center">
 
 
 [This](https://iwaponline.com/ws/article/19/4/1036/63760/Fiber-filter-built-with-polypropylene-fibers)paper suggests making fibers out of polypropylene. I am struggling to find a clear outline how to recreate this however, and it seems that it is not widely used at the moment. 
 
-<b> Float switch </b>
-I believe that I would need to buy a float switch device (listed above). However, I am hoping that with the Arduino that I can code the specific parameters I want for my float switch (i.e. minimum depth of water for when pump turns off).
 
 <b> Turbidity Monitor </b>
 It would be really cool to have a turbidity monitor or probe to check if my filter is really filtering out larger particles. I have only found [this](https://www.instructables.com/How-to-Make-Water-Turbidity-Sensor/) resource so far which details how to make a turbidity monitor. While I may have to order the parts, the assembly seems feasible. I would like to investigate how to make the design more compact, unlike the one shown on the site.
@@ -208,6 +207,8 @@ The “Jinhe motor submersible Bilge pump” used for fish-tanks was used in pla
 The filter is modelled of this 5-stage filter, with the main difference being removable compartments. Components were extracted from the purchased filter and mesh was purchased separately. The mesh was secured to the compartments of the filter using a press-fit, additional 3d printed ring. PETG filament was used given its water-safe and waterproof qualities, however additional silicone coating was required to further seal the print.
 
 <img src="filter.jpeg" alt="filter" style="width:60%"  class="center">
+
+<iframe src="https://college418.autodesk360.com/shares/public/SH9285eQTcf875d3c539c97339a88419e3ed?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
 
 <u>Water Sensor</u>
 
