--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -121,24 +121,16 @@ Phase 4: If within scope, create turbidity probe to test water before and after 
 
 Things that I may need to order
 - [Float switch](https://www.gadgetronicx.com/interfacing-float-sensor-arduino/)
+
 o I could possibly make one myself but this seems out of the scope of this class and too complicated considering this is one of many components to my final project
+
 - Possible material for water filters:
+
 o Fine sand, charcoal, pebbles, activated carbon
+
  I would like to find something more sophisticated to use like real sawyer filters but again this may be out of the scope of the project
 
-- If I make a turbidity sensor as well:
-- Particle photon
-- Laser
-- LDR
-- On/off button
-- Small resistor
-- Breadboard
-- Transparent pvc tube
-- Solder tin
-- Sealant
-- [Source](https://www.instructables.com/How-to-Make-Water-Turbidity-Sensor/)
-- Design will be modified but principal mechanism will remain the same
-
+-
 
 <b> Project Plan </b>
 
@@ -181,10 +173,6 @@ To create a household (i.e. small scale) , cost-effective water system with an e
 
 <img src="individual_labelled.jpg" alt="labelled system" class="center">
 
-Individual components labelled
-
-System together 
-
 <img src="system_labelled.jpg" alt="labelled system" class="center">
 
 
@@ -208,7 +196,7 @@ The filter is modelled of this 5-stage filter, with the main difference being re
 
 <img src="filter.jpeg" alt="filter" style="width:60%"  class="center">
 
-<iframe src="https://college418.autodesk360.com/shares/public/SH9285eQTcf875d3c539c97339a88419e3ed?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+<iframe src="https://college418.autodesk360.com/shares/public/SH9285eQTcf875d3c539c97339a88419e3ed?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0" class="center"></iframe>
 
 <u>Water Sensor</u>
 
